--- a/package.json
+++ b/package.json
@@ -9,12 +9,56 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.2",
+    "@react-email/container": "^0.0.8",
+    "@react-email/html": "^0.0.4",
+    "@react-email/render": "^0.0.7",
+    "@react-email/section": "^0.0.9",
+    "@react-email/text": "^0.0.5",
+    "antd": "^5.5.0",
+    "axios": "^1.4.0",
+    "mysql2": "^3.3.1",
+    "next": "^13.2.4",
+    "nodemailer": "^6.9.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-email": "^1.9.3"
   },
   "devDependencies": {
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2"
+    "@types/mysql": "^2.15.21",
+    "@types/react": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-prettier": "^0.0.0-empty",
+    "husky": "^4.2.5",
+    "jest": "^25.4.0",
+    "lint-staged": "^10.1.7",
+    "prettier": "^2.5.1",
+    "prettier-eslint-cli": "^5.0.1",
+    "typescript": "5.0.2"
+  },
+  "lint-staged": {
+    "**/*.ts": [
+      "eslint --fix"
+    ],
+    "**/*.tsx": [
+      "eslint --fix"
+    ]
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
