--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@react-email/render": "^0.0.7",
     "@react-email/section": "^0.0.9",
     "@react-email/text": "^0.0.5",
+    "@react-pdf/renderer": "^2.0.0",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "mysql2": "^3.3.1",
     "next": "^13.2.4",
     "nodemailer": "^6.9.2",
