--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@react-pdf/renderer": "^3.0.0",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
     "mysql2": "^3.3.1",
     "next": "^13.2.4",
     "nodemailer": "^6.9.2",
+    "pg": "^8.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^1.9.3"
