--- a/package.json
+++ b/package.json
@@ -9,21 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@react-email/container": "^0.0.8",
     "@react-email/html": "^0.0.4",
     "@react-email/render": "^0.0.7",
     "@react-email/section": "^0.0.9",
     "@react-email/text": "^0.0.5",
     "@react-pdf/renderer": "^3.0.0",
+    "@types/node-jose": "^1.1.10",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "cookie": "^0.5.0",
     "dayjs": "^1.11.7",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "jose": "^4.8.3",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "mysql2": "^3.3.1",
-    "next": "^13.2.4",
+    "next": "12.2.3",
+    "next-auth": "^4.22.1",
     "nodemailer": "^6.9.2",
     "pg": "^8.11.0",
     "react": "18.2.0",
