--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node-jose": "^1.1.10",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
     "dayjs": "^1.11.7",
