--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@headlessui/react": "^1.7.15",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@react-email/container": "^0.0.8",
@@ -47,6 +48,7 @@
     "@types/react": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -63,8 +65,10 @@
     "husky": "^4.2.5",
     "jest": "^25.4.0",
     "lint-staged": "^10.1.7",
+    "postcss": "^8.4.24",
     "prettier": "^2.5.1",
     "prettier-eslint-cli": "^5.0.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.2"
   },
   "lint-staged": {
