--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-email/section": "^0.0.9",
     "@react-email/text": "^0.0.5",
     "@react-pdf/renderer": "^3.0.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node-jose": "^1.1.10",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
@@ -41,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^1.9.3",
+    "react-redux": "^8.0.7",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
