--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "18.2.0",
     "react-email": "^1.9.3",
     "react-redux": "^8.0.7",
+    "redux-persist": "^6.0.0",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
