--- a/package.json
+++ b/package.json
@@ -27,16 +27,20 @@
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
     "dayjs": "^1.11.7",
+    "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
+    "formidable": "^2.1.1",
     "html2canvas": "^1.4.1",
     "jose": "^4.8.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.1",
     "next": "12.2.3",
     "next-auth": "^4.22.1",
+    "next-connect": "0.8.1",
     "nodemailer": "^6.9.2",
     "pg": "^8.11.0",
     "react": "18.2.0",
