--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.22.2",
+    "firebase-tools": "^12.4.0",
     "formidable": "^2.1.1",
     "html2canvas": "^1.4.1",
     "jose": "^4.8.3",
@@ -45,6 +47,7 @@
     "next": "12.2.3",
     "next-auth": "^4.22.1",
     "next-connect": "0.8.1",
+    "next-cors": "^1.0.0",
     "nodemailer": "^6.9.2",
     "pg": "^8.11.0",
     "react": "18.2.0",
