--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "18.2.0",
     "react-email": "^1.9.3",
     "react-redux": "^8.0.7",
+    "react-responsive-carousel": "^3.2.23",
     "read-excel-file": "^5.6.1",
     "redux-persist": "^6.0.0",
     "swiper": "^9.3.2",
