--- a/package.json
+++ b/package.json
@@ -55,8 +55,12 @@
     "react-email": "^1.9.3",
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
+    "react-spring": "^9.7.2",
+    "react-transition-group": "^4.4.5",
     "read-excel-file": "^5.6.1",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^9.3.2",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
