--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.1",
