--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "read-excel-file": "^5.6.1",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.20",
     "swiper": "^9.3.2",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
