--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.9",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.22.2",
