--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase": "^9.22.2",
     "firebase-tools": "^12.4.0",
     "formidable": "^2.1.1",
+    "framer-motion": "^10.12.16",
     "html2canvas": "^1.4.1",
     "jose": "^4.8.3",
     "js-cookie": "^3.0.1",
@@ -52,6 +53,7 @@
     "nodemailer": "^6.9.2",
     "pg": "^8.11.0",
     "react": "18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-email": "^1.9.3",
     "react-redux": "^8.0.7",
@@ -59,11 +61,14 @@
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.2",
     "react-transition-group": "^4.4.5",
+    "react-tsparticles": "^2.9.3",
     "read-excel-file": "^5.6.1",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.20",
     "swiper": "^9.3.2",
+    "tailwind-scrollbar": "^3.0.5",
+    "tsparticles": "^2.9.3",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
   },
