--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.15",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@next/font": "^13.4.4",
     "@react-email/container": "^0.0.8",
     "@react-email/html": "^0.0.4",
     "@react-email/render": "^0.0.7",
@@ -46,7 +47,7 @@
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.1",
-    "next": "12.2.3",
+    "next": "13.4.3",
     "next-auth": "^4.22.1",
     "next-connect": "0.8.1",
     "next-cors": "^1.0.0",
@@ -61,13 +62,13 @@
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.2",
     "react-transition-group": "^4.4.5",
-    "react-tsparticles": "^2.9.3",
     "read-excel-file": "^5.6.1",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.20",
     "swiper": "^9.3.2",
     "tailwind-scrollbar": "^3.0.5",
+    "react-tsparticles": "^2.9.3",
     "tsparticles": "^2.9.3",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
