--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "jsx": "preserve",
+    "paths": {
+      "react": [
+        "./node_modules/@types/react"
+      ]
+    },
     "lib": [
       "dom",
       "dom.iterable",
@@ -16,7 +22,6 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
     "target": "es5"
   },
   "include": [
