--- a/package.json
+++ b/package.json
@@ -57,18 +57,20 @@
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-email": "^1.9.3",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.2",
     "react-transition-group": "^4.4.5",
+    "react-tsparticles": "^2.9.3",
     "read-excel-file": "^5.6.1",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.20",
     "swiper": "^9.3.2",
     "tailwind-scrollbar": "^3.0.5",
-    "react-tsparticles": "^2.9.3",
     "tsparticles": "^2.9.3",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
